.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/MobileMessaging_SMS_Message__c.object-meta.xml
<CustomObject>
    <description>This object holds the text messages sent and received. by the contact</description>
    <label>MobileMessaging SMS Message</label>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MobileMessaging SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>