.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MobileMessaging SMS Messages</relationshipLabel>
    <relationshipName>Text_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>