.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Created_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_and_Time__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Created Date and Time</label>
    <type>DateTime</type>
</CustomField>