.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Number__c</fullName>
    <description>Number Incoming SMS Sent to (for Cost Center)</description>
    <label>Destination_Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>