.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inbound</fullName>
            </value>
            <value>
                <fullName>outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>