.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>SMS Message content for incoming and outgoing messages</description>
    <label>Message Content</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>