.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Message_Response__c.field-meta.xml
<CustomField>
    <fullName>Message_Response__c</fullName>
    <label>Message Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>