.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <description>Storing the sender name at the time of sending the message in case it was changed</description>
    <label>Sender Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>