.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/Short_Message__c.field-meta.xml
<CustomField>
    <fullName>Short_Message__c</fullName>
    <label>Short Message</label>
    <type>TextArea</type>
</CustomField>