.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/fields/TempMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>TempMobilePhone__c</fullName>
    <label>TempMobilePhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>