.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Direction__c</columns>
    <columns>Message_Content__c</columns>
    <columns>Message_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>james</value>
    </filters>
    <label>All</label>
</ListView>