.vscode/allianceuat_compare/force-app/main/default/objects/MobileMessaging_SMS_Message__c/listViews/Outbound_SMS.listView-meta.xml
<ListView>
    <fullName>Outbound_SMS</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Direction__c</columns>
    <columns>Message_Content__c</columns>
    <columns>Message_Response__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Sender__c</columns>
    <columns>Sender_Name__c</columns>
    <columns>Short_Message__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direction__c</field>
        <operation>equals</operation>
        <value>outbound</value>
    </filters>
    <label>Outbound SMS</label>
</ListView>